2005-08-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/dialogs/insertsub.py:
	  Reordered methods.
	  
	* gui/dialogs/prefs.py(_connect_signals):
	  Improved error handling for radio button grouping.
	  
	* gui/dialogs/language.py:
	  New file for language selection dialog. Works!
	  
	* gui/delegates/prefeditor.py:
	  Removed a debugging print command left by accident.

	* gui/delegates/spellchecker.py:
	  Added code for language dialog. Works!
	  
	* lib/util/langlib.py:
	  Added a better and longer list of languages. Added method
	  get_descriptive_name.

2005-08-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	  gui/dialogs/about.py:
	  Replaced accidental tabs with spaces.
	  
	* gui/delegates/guiupdater.py:
	  Check for PyEnchant version as well.

2005-08-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* spellcheck-window.glade:
	  Revised wording and added "Add Lower" button.

2005-08-29  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/application.py:
	  Added spell-check methods to delegation dictionary.
	  
	* gui/delegates/guibuilder.py:
	  Added tools menu and spell-check menu items.

	* gui/delegates/spellchecker.py:
	  New delegate for spell-checks.
	  
	* gui/delegates/guiupdater.py:
	  Added sensitivity setting for spell-check items.
	  
	* gui/util/config.py:
	  Added spell-checking settings.

	* lib/util/langlib.py:
	  New file for language codes and names.
	  
	* language-dialog.glade: 
	  New file for language setting dialog.
	  
	* spellcheck-window.glade:
	  New file for spell-check window.
	  
	* edit-dialog.glade:
	  New file for single text edit dialog.
	  
	* toolbar.xml:
	  Added spell-check item.
	
	* menubar.xml:
	  Added spell-check items.

2005-08-28  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* test: New directory for tests.
	* test/pyenchant: New file to test PyEnchant installation.
	* MANIFEST.in: Added new test directory and all contents.

2005-08-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gui/delegates/fileopener.py: